# Bluetooth-Cap

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  cli.py  onboard.py  prek.toml  pyproject.toml  release.md
.agents/skills/manage-agent-config/: SKILL.md
.claude/rules/: codex-claude-sync.md
.claude/skills/gif-protocol/: skill.md
.claude/skills/usage/: SKILL.md
.cursor/rules/: file_length.mdc  langfuse.mdc
.github/workflows/: nightly_tests.yaml  release.yml
commands/: _resolve.py  audio.py  brightness.py  clock.py  default.py  device.py  doctor.py  erase.py  flip.py  image.py  info.py  notify.py  pixel.py  power.py  probe.py  scan.py  screen.py  secrets.py  send.py  text.py  transcribe.py
common/: config_models.py  global_config.py  global_config.yaml
dev-docs/: 17-05-2026-ble-protocol-and-cli-code-review.md
extensions/audio_reactive/: capture.py  engine.py
extensions/transcription/: assets.py  engine.py  renderer.py
manual_docs/readme_examples/: open_source.md
scripts/: check_file_length.py  check_large_files.sh  install-skills.sh  sync_agent_config.py
src/audio_reactive/: engine.py  visualizer.py
src/cli/: completions.py  scaffold.py  security.py  state_store.py  telemetry.py  update.py
src/protocol/: __init__.py  commands.py  connection.py  device_types.py  transport.py
src/transcription/: assets.py  capture.py  engine.py  renderer.py  transcriber.py
src/utils/: interactive.py  output.py  theme.py
tests/: test_logging_thread_safety.py  test_onboard.py
tests/cli/: test_cli.py  test_security.py  test_state.py  test_telemetry.py
tests/healthcheck/: test_env_var_loading.py  test_pydantic_type_coercion.py
tests/protocol/: test_commands.py  test_device_types.py
utils/llm/: dspy_langfuse.py
