[project]
name = "bluetooth-cap"
version = "0.1.1"
description = "🧢 CLI for interfacing with BLE LED matrix cap (reverse engineering & control)"
authors = [
    { name = "miyamura80", email = "eitomiyamura@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
keywords = ["bluetooth", "ble", "led", "cap", "reverse-engineering", "bleak"]
dependencies = [
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "human-id>=0.2.0",
    "import-linter>=2.1.1",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
    "termcolor>=2.5.0",
    "loguru>=0.7.3",
    "vulture>=2.14",
    "tenacity>=9.0.0",
    "pillow>=12.1.0",
    "ty>=0.0.14",
    "pytest-env>=1.2.0",
    "pydantic-settings>=2.7.1",
    "pytest-cov>=7.0.0",
    "pytest-repeat>=0.9.3",
    "pylint>=3.3.3",
    "deptry>=0.23.0",
    "openfeature-sdk>=0.7.1",
    "scrubadub>=2.0.1",
    "pydantic>=2.10.6",
    "numpy>=2.2.2",
    "typer",
    "questionary",
    "rich>=14.3.1",
    "packaging>=24.0",
    "keyring>=25.0.0",
    "bleak>=3.0.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.urls]
Homepage = "https://github.com/Miyamura80/Bluetooth-Cap"
Repository = "https://github.com/Miyamura80/Bluetooth-Cap"
Issues = "https://github.com/Miyamura80/Bluetooth-Cap/issues"

[project.scripts]
bluecap = "cli:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src", "common", "utils", "commands"]
force-include = {"cli.py" = "cli.py"}

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "C901", "FIX", "BLE"]
ignore = ["E501", "UP015", "B008"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ty]

[tool.ty.rules]
possibly-unresolved-reference = "error"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = ["scripts/sync_agent_config.py"]

[tool.deptry]
ignore = ["DEP002"]

[tool.vulture]
exclude = [
    ".venv-test/",
    ".venv/",
    ".uv-cache/",
    ".uv_cache/",
    ".uv_tools/",
    ".uv-tools/",
    "docs/",
    "node_modules/",
    "tests/test_logging_security.py",
    "tests/test_logging_thread_safety.py",
    "tests/test_template.py",
    "utils/llm/",
    "common/",
    "src/utils/logging_config.py",
    "src/utils/context.py",
    "src/utils/interactive.py",
    "src/utils/progress.py",
    "src/utils/output.py",
    "src/utils/errors.py",
    "src/utils/theme.py",
    "tests/conftest.py",
    "init/",
    "commands/",
    "src/cli/",
    "src/protocol/",
    "cli.py",
    "templates/"
]

[tool.file_length]
max_lines = 500
exclude = []

[tool.coverage.run]
branch = true
source = ["src", "common", "utils", "commands"]
omit = [
    "tests/*",
    "docs/*",
    "init/*",
    "alembic/*",
]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest-check-links>=0.9.1",
]
